Skip to content

Wrong Default Audio Device Selection - Windows 7 x64, VLC 2.0.x

Hello, I have a strange problem. Indeed, for all releases of version 2.0.x of VLC, the out-of-the-box audio device used by VLC is wrong. Indeed, I have 3 audio devices on my laptop: 1xSPDIF and 2xSpeakers. Both 'Spkeakers' devices look the same (under the 'Sound' > 'Playback' applet of 'Control Panel') but one (the first one starting from top on the attached screenshot) is for my laptop's headphone jack and the other one is for my laptop's speakers. When I have nothing plugged in, the headphone device is turned off and the speakers one is turned on and selected by default. And, when I plug something, the headphone one turns on and is selected by default (Note: the speakers one stays enabled). But VLC, with its default configuraion ('Tools' > 'Preferences' > 'Audio' > 'Output mode: Default') is always using the speakers device (even if it's not the one set as default... when I have an headphone plugged in). VLC is the only program to behave this way: all the other programs and Windows use the right device; the one selected as default when I launch the program. I also noticed that, if I toggle 'Output mode' to 'DirectX audio output', I can't manually select the right device. The list presents me with 'Primary Sound Driver' folowed by my 3 devices; probably in the same order as in the control panel's applet. If I choose the first speaker one (which is corresponding to the headphone one) and press 'Save' button: VLC automaticaly re-select the second one. Indeed, if I restart VLC or simply return to the 'Preferences' window, the second option is selected. Tristan

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information