DirectSound: use device GUID instead of device name (fixes #7102)